fix jump margin in header

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -20,7 +20,7 @@
 }
 .container {
 	width: 1400px;
-	margin: 0 auto;
+	margin: 0 260px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
